# dtv

./: README.md
dtv-server/: pyproject.toml
dtv-server/dtv_server/dtv_site/: .gitignore  README.md  db.sqlite3  manage.py
dtv-server/dtv_server/dtv_site/branch_services/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
dtv-server/dtv_server/dtv_site/branch_services/migrations/: 0001_initial.py  0002_alter_treatlicense_photo.py  0002_remove_treatlicense_id_and_more.py  0003_alter_treatlicense_photo.py  0003_ticket_dtvwindow.py
dtv-server/dtv_server/dtv_site/branch_services/static/css/: styles.css
dtv-server/dtv_server/dtv_site/branch_services/templates/branch_services/: create_ticket.html  id_editor.html  id_lookup.html  index.html  internal_template.html  status.html  window.html
dtv-server/dtv_server/dtv_site/dtv_site/: asgi.py  settings.py  urls.py  wsgi.py
dtv-server/dtv_server/dtv_site/records/treat_license_id_card_files/: .gitignore
dtv-server/dtv_server/dtv_site/records/treat_license_photos/: .gitignore
dtv-server/dtv_server/dtv_site/scripts/: README.md  id_card_utils.py
dtv-server/dtv_server/dtv_site/scripts/config/: id_card_config.yaml
